--- a/HomeTaskWithPermissions/App.config
+++ b/HomeTaskWithPermissions/App.config
@@ -5,6 +5,6 @@
     </startup>
 
 	<connectionStrings>
-		<add name="dbcs" connectionString="Data Source=localhost\SQLEXPRESS; Initial Catalog=permissionTask; Integrated Security=true" providerName="System.Data.SqlClient"/>
+		<add name="dbcs" connectionString="Data Source=DESKTOP-8D8TGL4\SQLEXPRESS; Initial Catalog=permissionTask; Integrated Security=true" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
